# GeenMoerAan

./: .gitignore  LICENSE  README.md
GUI/Controller Source code/: Controller.pro  Controller.pro.user.18  function.cpp  function.h  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  scripts.qrc  scripts.sh
GUI/Controller-excutable/: moc_function.cpp  qrc_images.cpp  qrc_scripts.cpp  scripts_start.sh  ui_mainwindow.h
GUI/Controller-executable/: Controller  moc_function.cpp  moc_mainwindow.cpp  qrc_images.cpp  qrc_scripts.cpp  script_hole_detcection.sh  scripts_start.sh  scripts_stop.sh  ui_mainwindow.h
Move_Handler/simulationV2/: CMakeLists.txt  package.xml
Move_Handler/simulationV2/Backup/: Move_NodeBackup.cpp
Move_Handler/simulationV2/src/: MoveHandler.cpp  Move_Node.cpp  Path_Publisher.cpp
Vision/widthMeasurement/: widthMeasurement.cpp
abb-packages/abb_irb120_moveit_config/launch/: move_group.launch  moveit.rviz  moveit_rviz.launch  trajectory_execution.launch.xml
abb-packages/abb_irb120_support/urdf/: irb120.urdf  irb120_macro.xacro
bolt_detection/: CMakeLists.txt  package.xml
bolt_detection/launch/: bolt_detection.launch  bolt_detector.launch
bolt_detection/msg/: BoltHoleInfo.msg
bolt_detection/resources/: out_camera_data.yml  out_transform_data.yml
bolt_detection/rviz/: view.rviz
bolt_detection/src/: bolt_detection.cpp  bolt_detector.cpp  bolt_detector.cpp.orig  bolt_detector.h
machine_learning/: CMakeLists.txt  package.xml
machine_learning/launch/: machine_learning.launch
machine_learning/resources/: out_save_object_dat1a.yml  out_save_object_data.yml  out_save_object_data2.yml  out_save_object_dataa.yml
machine_learning/src/: machine_learning.cpp
robot_mover/: CMakeLists.txt  package.xml
robot_mover/include/: MoveHandler.h  move_handler.h
robot_mover/launch/: robot_mover.launch  simulation.launch  start_system.launch
robot_mover/src/: Move_Node.cpp  Path_Publisher.cpp  move_handler.cpp  move_node.cpp  path_publisher.cpp
ros-packages/workspace/src/abb_irb120_moveit_config/launch/: moveit.rviz  trajectory_execution.launch.xml
ros-packages/workspace/src/abb_irb120_support/urdf/: irb120.urdf  irb120_macro.xacro  irb120_macrotemp.xacro
vision_widthmeasurement/: CMakeLists.txt
